--- a/2018/DNGlide2/local.properties
+++ b/2018/DNGlide2/local.properties
@@ -4,6 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Jun 02 09:57:52 CST 2020
+#Wed Jun 03 23:37:37 CST 2020
 ndk.dir=C\:\\Users\\Administrator\\AppData\\Local\\Android\\Sdk\\ndk-bundle
-sdk.dir=E\:\\developSoftWare\\androidSdk
+sdk.dir=D\:\\AS2.3\\sdk
