--- a/2018/ALiPayPlugin/app/src/main/AndroidManifest.xml
+++ b/2018/ALiPayPlugin/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         </activity>
         <activity android:name=".ProxyActivity"/>
         <service android:name=".ProxyService"/>
+        <receiver android:name=".ProxyBroadCast" />
     </application>
 
 </manifest>
