--- a/2018/ALiPayPlugin/taopiaopiao/src/main/AndroidManifest.xml
+++ b/2018/ALiPayPlugin/taopiaopiao/src/main/AndroidManifest.xml
@@ -6,7 +6,6 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".OneActivity">
@@ -21,6 +20,11 @@
                 <category android:name="android.intent.category.DEFAULT"></category>
             </intent-filter>
         </activity>
+        <receiver android:name=".StaticReceiver">
+            <intent-filter>
+                <action android:name="com.dongnao.alvin.taopiaopiao.MainActivity" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
