--- a/2018/HookFrameWorkYouHua/plugin/build.gradle
+++ b/2018/HookFrameWorkYouHua/plugin/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
-
+    compileSdkVersion 22
+    buildToolsVersion '22.0.0'
 
 
     defaultConfig {
         applicationId "com.dongnao.barry.plugin"
         minSdkVersion 20
-        targetSdkVersion 23
+        targetSdkVersion 21
         versionCode 1
         versionName "1.0"
 
@@ -28,7 +28,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'com.android.support:appcompat-v7:23+'
+    implementation 'com.android.support:appcompat-v7:22.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
