--- a/2018/HookFrameWorkYouHua/plugin/src/main/AndroidManifest.xml
+++ b/2018/HookFrameWorkYouHua/plugin/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".SceondActivity"></activity>
     </application>
 
 </manifest>
