--- a/2018/DNRouter/local.properties
+++ b/2018/DNRouter/local.properties
@@ -4,6 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Jul 12 10:00:02 CST 2020
+#Mon Jul 13 10:36:28 CST 2020
 ndk.dir=C\:\\Users\\Administrator\\AppData\\Local\\Android\\Sdk\\ndk-bundle
-sdk.dir=D\:\\AS2.3\\sdk
+sdk.dir=E\:\\developSoftWare\\androidSdk
